[package]
name = "tckn_utils"
description = "A collection of utilities for generating dummy TCKN values and validating against the tckn rules."
readme = "README.md"
authors = ["Dursun KOC (@dursunkoc) <dursunkoc@gmail.com>"]
repository = "https://github.com/dursunkoc/tckn_utils"
version = "0.1.0"
license-file = "LICENSE.md"
keywords = ["turkish", "citizenship", "identity", "tckn"]
categories = ["value-formatting"]
edition = "2021"


[dependencies]
rand = "0.8.5"

[dev-dependencies]
rstest = "0.18.2"
